[package]
name = "godot_goap_rust"
version = "0.1.0"
edition = "2021"

[features]
default = []

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.5.0"
enum_dispatch = "0.3.13"
godot = { git = "https://github.com/godot-rust/gdext", features = ["register-docs", "serde", "experimental-threads", "experimental-godot-api",  "api-custom", "custom-godot"], branch = "master" }
pathfinding = "4.13.0"
rayon = "1.10.0"
ron = "0.8"
serde = { version = "^1.0", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.4"
rand = "0.9.0-alpha.2"
